# dgtboard-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
core/: Cargo.toml  README.md
core/src/: board.rs  decoder.rs  game.rs  lib.rs  rules.rs
native/: Cargo.toml
native/src/: lib.rs  main.rs
src/: board.rs  doctor.rs  game.rs  lib.rs  main.rs  protocol.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: build.sh  index.html  main.js
web/pkg/: dgtboard_wasm.d.ts  dgtboard_wasm.js  dgtboard_wasm_bg.wasm  dgtboard_wasm_bg.wasm.d.ts  package.json
