[workspace]
resolver = "2"
members = ["core", "native", "wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emeijdam/dgtboard-rs"
homepage = "https://github.com/emeijdam/dgtboard-rs"

[workspace.dependencies]
dgtboard-core = { path = "core", version = "0.1.0" }
serialport = "4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasm-bindgen = "0.2"
