[package]
name = "dgtboard-core"
description = "DGT electronic chess board protocol: byte framing, board state, and move detection (no I/O — runs anywhere, incl. WebAssembly)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["dgt", "chess", "chessboard", "protocol", "wasm"]
categories = ["parsing", "game-development"]

[lib]
name = "dgtboard_core"

[features]
default = []
# Legality validation + check/checkmate/stalemate detection, via shakmaty.
rules = ["dep:shakmaty"]

# The base crate is intentionally dependency-free: pure logic that compiles
# cleanly to wasm32 and stays tiny. `rules` is the one optional exception.
[dependencies]
shakmaty = { version = "0.30", optional = true }
